# Document-Analysis-Tool

./: README.md  docker-compose.yml  hello.py  package-lock.json  package.json  pyproject.toml  test.py
backend/: main.py  requirements.txt  test.xlsx
backend/app/: analyzer.py  config.py  routes.py
frontend/: Dockerfile
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: PatentForm.jsx  ResultsTable.jsx
